fixed github+twitter icons spacing, added favicon

--- a/src/css/base/_layout.scss
+++ b/src/css/base/_layout.scss
@@ -1,5 +1,7 @@
 .icons {
+	margin-left: 8px;
 	img {
+		margin-left: 4px;
 		height: 32px;
 	}
 }
